--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.venv
 # Following section ignores files for virtualenv <<<<<<<<<
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
